--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,13 @@ on:
     
 jobs:
   build:
+    env:
+      BUILD_CONFIG: 'Release'
+      SOLUTION: 'BaseProject/BaseProject.sln'
+      AZURE_ARTIFACTS_FEED_URL: https://timcyspet.pkgs.visualstudio.com/_packaging/timcyspet/nuget/v3/index.json    
+
     runs-on: ubuntu-latest
+    
     timeout-minutes: 5
     steps:
     - name: Checkout
