--- a/.github/workflows/CloudNativeCommon.yml
+++ b/.github/workflows/CloudNativeCommon.yml
@@ -57,12 +57,15 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+
+    - name: Restore dependencies
+      run: nuget restore $SOLUTION
       
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v1
       
     - name: Build
-      run: dotnet build -c Release
+      run: dotnet build $SOLUTION --configuration $BUILD_CONFIG --no-restore
       
     #- name: Test
     # run: dotnet test -c Release --no-build
