--- a/.github/workflows/CloudNativeCommon.yml
+++ b/.github/workflows/CloudNativeCommon.yml
@@ -64,13 +64,16 @@ jobs:
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v1
       
+    - name: Set VERSION variable from tag
+      run: echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
+      
     - name: Build
-      run: dotnet build $SOLUTION --configuration $BUILD_CONFIG --no-restore
+      run: dotnet build $SOLUTION --configuration $BUILD_CONFIG /p:Version=${VERSION} --no-restore
       
     #- name: Test
     # run: dotnet test -c Release --no-build
       
     #- name: Pack nugets
     #  run: dotnet pack -c Release --no-build --output .
-    - name: Push to NuGet
-      run: dotnet nuget push **\*.nupkg --api-key ${{secrets.nuget_api_key}} --source https://api.nuget.org/v3/index.json
+    #- name: Push to NuGet
+    #  run: dotnet nuget push **\*.nupkg --api-key ${{secrets.nuget_api_key}} --source https://api.nuget.org/v3/index.json
