--- a/.github/workflows/CloudNativeCommon.yml
+++ b/.github/workflows/CloudNativeCommon.yml
@@ -43,6 +43,8 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+    tags:
+    - "v[0-9]+.[0-9]+.[0-9]+"
     
 jobs:
   build:
