--- a/.github/workflows/CloudNativeCommon.yml
+++ b/.github/workflows/CloudNativeCommon.yml
@@ -37,21 +37,20 @@
 # refer to https://github.com/microsoft/github-actions-for-desktop-apps
 
 name: Release Common
-
+ 
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-    tags:
-    - "v[0-9]+.[0-9]+.[0-9]+"
     
 jobs:
   build:
     env:
       BUILD_CONFIG: 'Release'
       SOLUTION: 'src/Common/Com.CloudNative.Common/Com.CloudNative.Common.sln'
-      AZURE_ARTIFACTS_FEED_URL: https://timcyspet.pkgs.visualstudio.com/_packaging/timcyspet/nuget/v3/index.json    
+      AZURE_ARTIFACTS_FEED_URL: https://timcyspet.pkgs.visualstudio.com/_packaging/timcyspet/nuget/v3/index.json 
+      VERSION: '1.0.+$(Build.BuildNumber)'
 
     runs-on: ubuntu-latest
         
@@ -65,9 +64,6 @@ jobs:
       
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v1
-      
-    - name: Set VERSION variable from tag
-      run: echo "VERSION=2.1.0" >> $GITHUB_ENV
       
     - name: Build
       run: dotnet build $SOLUTION --configuration $BUILD_CONFIG /p:Version=${VERSION} --no-restore
