--- a/.github/workflows/CloudNativeCommon.yml
+++ b/.github/workflows/CloudNativeCommon.yml
@@ -50,7 +50,7 @@ jobs:
       BUILD_CONFIG: 'Release'
       SOLUTION: 'src/Common/Com.CloudNative.Common/Com.CloudNative.Common.sln'
       AZURE_ARTIFACTS_FEED_URL: https://timcyspet.pkgs.visualstudio.com/_packaging/timcyspet/nuget/v3/index.json 
-      VERSION: '1.0.+$(Build.BuildNumber)'
+      VERSION: '1.0.0+$(Build.BuildNumber)'
 
     runs-on: ubuntu-latest
         
