--- a/.github/workflows/CloudNativeCommon.yml
+++ b/.github/workflows/CloudNativeCommon.yml
@@ -37,24 +37,23 @@
 # refer to https://github.com/microsoft/github-actions-for-desktop-apps
 
 name: Release Common
- 
+
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-    
+   
 jobs:
   build:
     env:
       BUILD_CONFIG: 'Release'
       SOLUTION: 'src/Common/Com.CloudNative.Common/Com.CloudNative.Common.sln'
       AZURE_ARTIFACTS_FEED_URL: https://timcyspet.pkgs.visualstudio.com/_packaging/timcyspet/nuget/v3/index.json 
-      VERSION: '1.0.0'
+      VERSION: '1.0.$(Rev:r)'
 
     runs-on: ubuntu-latest
-        
-    timeout-minutes: 5
+   
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -65,7 +64,7 @@ jobs:
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v1
     - name: echo version
-      run: echo '${Build.BuildNumber}' >>  $GITHUB_OUTPUT
+      run: echo '${{Rev:r}}' >>  $GITHUB_OUTPUT
       
     - name: Build
       run: dotnet build $SOLUTION --configuration $BUILD_CONFIG /p:Version=${VERSION} --no-restore
