--- a/.github/workflows/CloudNativeCommon.yml
+++ b/.github/workflows/CloudNativeCommon.yml
@@ -64,7 +64,7 @@ jobs:
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v1
     - name: echo version
-      run: echo '${{Rev:r}}' >>  $GITHUB_OUTPUT
+      run: echo '${Rev:r}' >>  $GITHUB_OUTPUT
       
     - name: Build
       run: dotnet build $SOLUTION --configuration $BUILD_CONFIG /p:Version=${VERSION} --no-restore
