--- a/.github/workflows/CloudNativeCommon.yml
+++ b/.github/workflows/CloudNativeCommon.yml
@@ -50,7 +50,7 @@ jobs:
       BUILD_CONFIG: 'Release'
       SOLUTION: 'src/Common/Com.CloudNative.Common/Com.CloudNative.Common.sln'
       AZURE_ARTIFACTS_FEED_URL: https://timcyspet.pkgs.visualstudio.com/_packaging/timcyspet/nuget/v3/index.json 
-      VERSION: '1.0.$(Rev:r)'
+      VERSION: '1.0.0'
 
     runs-on: ubuntu-latest
    
@@ -64,7 +64,7 @@ jobs:
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v1
     - name: echo version
-      run: echo '${Rev:r}' >>  $GITHUB_OUTPUT
+      run: echo building $(Build.BuildNumber) >>  $GITHUB_OUTPUT
       
     - name: Build
       run: dotnet build $SOLUTION --configuration $BUILD_CONFIG /p:Version=${VERSION} --no-restore
