--- a/.github/workflows/CloudNativeCommon.yml
+++ b/.github/workflows/CloudNativeCommon.yml
@@ -64,7 +64,7 @@ jobs:
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v1
     - name: echo version
-      run: echo building $(Build.BuildNumber) >>  $GITHUB_OUTPUT
+      run: echo building $BUILD_NUMBER >>  $GITHUB_OUTPUT
       
     - name: Build
       run: dotnet build $SOLUTION --configuration $BUILD_CONFIG /p:Version=${VERSION} --no-restore
