--- a/.github/workflows/CloudNativeCommon.yml
+++ b/.github/workflows/CloudNativeCommon.yml
@@ -50,7 +50,7 @@ jobs:
       BUILD_CONFIG: 'Release'
       SOLUTION: 'src/Common/Com.CloudNative.Common/Com.CloudNative.Common.sln'
       AZURE_ARTIFACTS_FEED_URL: https://timcyspet.pkgs.visualstudio.com/_packaging/timcyspet/nuget/v3/index.json 
-      VERSION: '1.0.0'
+      VERSION: Format("{0}.{1}",'1.0.0',${GITHUB_RUN_NUMBER})
       resourceGroup1: ${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
       resourceGroup2: ${{ github.run_id }}-${{ github.run_number }}
 
