--- a/.github/workflows/CloudNativeCommon.yml
+++ b/.github/workflows/CloudNativeCommon.yml
@@ -51,8 +51,7 @@ jobs:
       SOLUTION: 'src/Common/Com.CloudNative.Common/Com.CloudNative.Common.sln'
       AZURE_ARTIFACTS_FEED_URL: https://timcyspet.pkgs.visualstudio.com/_packaging/timcyspet/nuget/v3/index.json 
       VERSION: '1.0.0'
-      resourceGroup1: $(date +'%Y-%m-%d')-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
-      resourceGroup2: ${{ github.run_id }}-${{ github.run_number }}
+      resourceGroup1: $(date +'%Y.%m.%d').${GITHUB_RUN_NUMBER}
 
     runs-on: ubuntu-latest
    
@@ -67,8 +66,6 @@ jobs:
       uses: actions/setup-dotnet@v1
     - name: test1
       run: echo ${{ env.resourceGroup1 }}
-    - name: test2
-      run: echo ${{ env.resourceGroup2 }}
       
     - name: Build
       run: dotnet build $SOLUTION --configuration $BUILD_CONFIG /p:Version=${VERSION} --no-restore
