--- a/.github/workflows/CloudNativeCommon.yml
+++ b/.github/workflows/CloudNativeCommon.yml
@@ -50,7 +50,7 @@ jobs:
       BUILD_CONFIG: 'Release'
       SOLUTION: 'src/Common/Com.CloudNative.Common/Com.CloudNative.Common.sln'
       AZURE_ARTIFACTS_FEED_URL: https://timcyspet.pkgs.visualstudio.com/_packaging/timcyspet/nuget/v3/index.json 
-      VERSION: $(date +'%Y.%m.%d').${GITHUB_RUN_NUMBER}
+      VERSION: '1.0.0'
       resourceGroup1: $(date +'%Y.%m.%d').${GITHUB_RUN_NUMBER}
 
     runs-on: ubuntu-latest
@@ -68,7 +68,7 @@ jobs:
       run: echo ${{ env.resourceGroup1 }}
       
     - name: Build
-      run: dotnet build $SOLUTION --configuration $BUILD_CONFIG /p:Version=${VERSION} --no-restore
+      run: dotnet build $SOLUTION --configuration $BUILD_CONFIG /p:Version=${{env.resourceGroup1}} --no-restore
       
     #- name: Test
     # run: dotnet test -c Release --no-build
