--- a/.github/workflows/CloudNativeCommon.yml
+++ b/.github/workflows/CloudNativeCommon.yml
@@ -64,7 +64,8 @@ jobs:
       
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v1
-    - name: test1
+      
+    - name: current version
       run: echo ${{ env.resourceGroup1 }}
       
     - name: Build
@@ -75,5 +76,5 @@ jobs:
       
     #- name: Pack nugets
     #  run: dotnet pack -c Release --no-build --output .
-    #- name: Push to NuGet
-    #  run: dotnet nuget push **\*.nupkg --api-key ${{secrets.nuget_api_key}} --source https://api.nuget.org/v3/index.json
+    - name: Push to NuGet
+      run: dotnet nuget push **\*.nupkg --api-key ${{secrets.nuget_api_key}} --source https://api.nuget.org/v3/index.json
